--- a/app/views/includes/alerts.pug
+++ b/app/views/includes/alerts.pug
@@ -7,11 +7,11 @@
             | <span class="text-center">If you find this tool useful, I accept donations thru this address: <b class='donate'>0x2548696795a3bCd6A8fAe7602fc26DD95A612574</b> <button onclick='copy_address_to_clipboard()' class="btn icon-button-display"><i class="fa fa-clone"  aria-hidden="true" alt="Copy"></i> </button>. Any amount will do. <span class="opacity-50 me-1" style="color: red;">♥♥♥</span>
             button(type="button" data-bs-dismiss="alert" aria-label="Close").btn-close
         .card.alert.rounded-3.p-3.text-white.bg-success
-            | <span class="text-center">Help us pay Google Cloud Platform by donating a coffee's worth of BNB to <b class='donate'>0x266f0D109b6cAA36e6c2f43F03b9e26748046864</b> Original site: <a href="https://cbtracker.cwsdev.net/">https://cbtracker.cwsdev.net/</a></span>
+            | <span class="text-center">Help us pay Google Cloud Platform by donating a coffee's worth of BNB to <b class='donate'>0x266f0D109b6cAA36e6c2f43F03b9e26748046864</b> <button onclick='copy_gcp_address_to_clipboard()' class="btn icon-button-display"><i class="fa fa-clone"  aria-hidden="true" alt="Copy"></i> </button></span>
     else
         .alert.alert-primary.alert-dismissible.fade.show(role="alert")
             | <span class="text-center">Welcome to <b>eD3ath's</b> Marketplace Listing!</span>
             button(type="button" data-bs-dismiss="alert" aria-label="Close").btn-close
         .card.alert.rounded-3.p-3.text-white.bg-success
-          | <span class="text-center">Help us pay Google Cloud Platform by donating a coffee's worth of BNB to <b class='donate'>0x266f0D109b6cAA36e6c2f43F03b9e26748046864</b> Original site: <a href="https://cbtracker.cwsdev.net/">https://cbtracker.cwsdev.net/</a></span>
+          | <span class="text-center">Help us pay Google Cloud Platform by donating a coffee's worth of BNB to <b class='donate'>0x266f0D109b6cAA36e6c2f43F03b9e26748046864</b> <button onclick='copy_gcp_address_to_clipboard()' class="btn icon-button-display"><i class="fa fa-clone"  aria-hidden="true" alt="Copy"></i> </button></span>
 
